Fix select input on iOS

--- a/styles.css
+++ b/styles.css
@@ -98,10 +98,12 @@ select {
 }
 
 input[type="date"] {
+    appearance: initial;
     -webkit-appearance: none;
 }
 
 select {
+    border-radius: initial;
     -webkit-border-radius: 0px;
 }
 
